--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>The Code Review</title>
 <meta content="width=device-width, initial-scale=1" name="viewport">
 <link href="style.css" rel="stylesheet" type="text/css">
-<link href"https://fonts.googleapis.com/css?family=PT+Sans|Droid+Serif:700" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=PT+Sans|Droid+Serif:700" rel="stylesheet" type="text/css">
 </head>
 <body>
     <div class="pageWrapper">
@@ -193,7 +193,7 @@
                         <input name="zip" id="zip" placeholder="xxxxx" type="text" value="">
                     </fieldset>
             </section>
-            <hr id="line2" class="single">
+            <hr class="single line2">
             <section class="column right">
                     <fieldset class="newsletter">
                         <legend>Newsletter</legend>
@@ -212,10 +212,26 @@
                         <input class="inlineCheckbox" type="radio" name="format" id="plain_text" value="plain_text">
                         <label class="inlineCheckbox" for="plain_text">Plain Text</label>
                     </fieldset>
-                    <label>Other topics you'd like to hear about</label> 
-                    <textarea placeholder="Are there other topics that you would like to hear about. Let us know."></textarea> 
-                    <button id="submit" name="submit" type="submit" value="submit">Sign Up</button>
+                    <fieldset class="newsletter" id="textbox">
+                        <label>Other topics you'd like to hear about</label> 
+                        <textarea placeholder="Are there other topics that you would like to hear about. Let us know."></textarea> 
+                	</fieldset>
                 </section>
+                <hr class="single line2">
+                <section class="column right">
+                	<fieldset class="newsletter">
+                        <legend>Classes</legend>
+                        <p>Would you be interested in taking classes? If so which ones?</p>
+                        <input class="inlineCheckbox" type="checkbox" name="classes" id="html-class" value="html">
+                        <label class="inlineCheckbox" for="html">HTML Class</label><br>
+                        <input class="inlineCheckbox" type="checkbox" name="classes" id="css-class" value="css">
+                        <label class="inlineCheckbox" for="css">CSS Class</label><br>
+                        <input class="inlineCheckbox" type="checkbox" name="classes" id="javascript-class" value="javascript">
+                        <label class="inlineCheckbox" for="javascript">Javascript Class</label>
+                    </fieldset>
+                </section>
+                <br>
+                <button id="submit" name="submit" type="submit" value="submit">Sign Up</button>
               </form>
             <h4>Copyright The Code Review</h4>
         </div><!--End interiorWrapper-->
