--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
                         <label class="inlineCheckbox" for="plain_text">Plain Text</label>
                     </fieldset>
                     <fieldset class="newsletter" id="textbox">
-                        <label>Other topics you'd like to hear about</label> 
-                        <textarea placeholder="Are there other topics that you would like to hear about. Let us know."></textarea> 
+                        <label for="topics">Other topics you'd like to hear about</label> 
+                        <textarea placeholder="Are there other topics that you would like to hear about. Let us know." id="topics"></textarea> 
                 	</fieldset>
                 </section>
                 <hr class="single line2">
@@ -223,11 +223,11 @@
                         <legend>Classes</legend>
                         <p>Would you be interested in taking classes? If so which ones?</p>
                         <input class="inlineCheckbox" type="checkbox" name="classes" id="html-class" value="html">
-                        <label class="inlineCheckbox" for="html">HTML Class</label><br>
+                        <label class="inlineCheckbox" for="html-class">HTML Class</label><br>
                         <input class="inlineCheckbox" type="checkbox" name="classes" id="css-class" value="css">
-                        <label class="inlineCheckbox" for="css">CSS Class</label><br>
+                        <label class="inlineCheckbox" for="css-class">CSS Class</label><br>
                         <input class="inlineCheckbox" type="checkbox" name="classes" id="javascript-class" value="javascript">
-                        <label class="inlineCheckbox" for="javascript">Javascript Class</label>
+                        <label class="inlineCheckbox" for="javascript-class">Javascript Class</label>
                     </fieldset>
                 </section>
                 <br>
